--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -66,7 +66,86 @@ We initially considered an alternative approach to logistic regression in which 
 
 #### LOGISTIC REGRESSION MODEL DIAGNOSTICS
 
-*To be added by Carrie*
+Logistic regressions require several assumptions, as listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, the goondess-of-fit, and the classification accuracy of LRPs developed from the logsitic regression.
+
+1. The relationship between aggregate abundance and log-odds (the logarithm of the odds of all CUs being among their lower benchmark) is linear.
+
+2. The observations are independent of each other (i.e., residuals are not autocorrelated).
+
+3. There are no influential outliers. 
+
+4. The sample size is sufficiently large. Logistic regression assumes that the sample size of the dataset is large enough to draw valid conclusions from the fitted logistic regression model.
+
+
+##### Evaluating assumption of linearity (Assumption 1)
+
+A Box-Tidwell test evaluates the significance of an additional interaction term in the logistic regression, 
+
+\begin{equation}
+  \log(\frac{p}{1-p}) = B_0 + B_1 \sum_{i}^{i=nCUs} S_{i,t} + B_2 \sum_{i}^{i=nCUs} S_{i,t} \times \log (\sum_{i}^{i=nCUs} S_{i,t})
+   (\#eq:BoxTidwelllogistic)
+\end{equation}
+
+A significant interaction term indicates a relationship between aggregate abunance and log-odds that is non-linear, violating the assumption [@fox_applied_2016].
+
+##### Evaluating independence (Assumption 2)
+
+
+Deviance residuals, $d$, were then estimated for each year,
+
+\begin{equation}
+   d = \pm \sqrt ( -2 ( y \log(\frac{\mu}{y}) + (1-y)\log(\frac{1-\mu}{1-y}) ) )
+   (\#eq:DevianceResid)
+\end{equation}
+
+where $\mu$ is the predicted probability of all CUs being above their lower benchmark and $y$ is the observation (0 or 1), in a given year [@fox_applied_2016]. This equation reduces to
+
+\begin{equation}
+   d =  - \sqrt ( -2 \log(1-\mu) )
+   (\#eq:DevianceResidy0)
+\end{equation}
+
+when $y=0$, and to,
+
+\begin{equation}
+   d =  \sqrt ( -2 \log(\mu)  )
+   (\#eq:DevianceResidy1)
+\end{equation}
+
+when $y=1$ (Ahmad et al. 2011).
+
+
+The magnitude of autocorrelation among residuals was then estimated using R (v.4.0.4)
+
+##### Evaluating outliers (Assumption 3)
+
+
+Deviance residuals were compared to a maximum threshold of 3, beyond which they are considered to be outliers (Ahmad et al. 2011).
+
+##### Evaluating sample size (Assumption 4)
+
+
+As a rule of thumb, Peduzzi et al.(1996) suggests a minimum of 10 cases with the least frequent outcome for each explanatory variable (1 in this case). For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then the minimum sample size of at least 10 / 0.5 = 20 to avoid biases in model coefficients, but would be higher if the data were skewed, e.g., 0.7 and 0.3; mimimum sample size = 10/0.3 = 33.
+
+
+
+
+6. Evaluate statistical significance of model coefficients using Wald's Test.
+
+7. Evaluate goodness-of-fit based on ratio of Deviance to the null model (~likelihood-ratio test).
+
+8. Evaluate quasi-Rsquared.
+  What is the ratio of the fit to the null model?
+
+9. Evaluate hit ratio.
+  What is the classification accuracy of the LRP based on the logistic
+  regression?
+
+10. Leave-one-out cross-validation of hit ratio.
+  What is the classification accuracy of the LRP when we use out-of-sample
+  predictions?
+  
+  
 
 
 ### PROJECTION-BASED LRPS
